--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	<link rel="apple-touch-icon" sizes="152x152" href="assets/img/common/favicon/apple-touch-icon-152x152.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/common/favicon/apple-touch-icon-180x180.png">
 	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="assets/img/common/favicon/android-chrome-192x192.png" sizes="192x192">
-	<link rel="icon" type="image/png" href="assets/img/common/favicon/favicon-96x96.png" sizes="96x96">
-	<link rel="icon" type="image/png" href="assets/img/common/favicon/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="16x16">
 	<link rel="manifest" href="assets/img/common/favicon/manifest.json">
 	<link rel="shortcut icon" href="assets/img/common/favicon/favicon.ico">
 	<meta name="msapplication-TileColor" content="#da532c">
@@ -60,10 +60,10 @@
 					<a href="index.html" class="mobile-menu__link">Home</a>
 					<ul class="mobile-menu__child">
 						<li class="mobile-menu__item ">
-							<a href="index-2.html" class="mobile-menu__link">Home secondary</a>
+							<a href="index.html" class="mobile-menu__link">Home secondary</a>
 						</li>
 						<li class="mobile-menu__item ">
-							<a href="index-3.html" class="mobile-menu__link">Home tertiary</a>
+							<a href="index.html" class="mobile-menu__link">Home tertiary</a>
 						</li>
 					</ul>
 				</li>
@@ -94,7 +94,8 @@
 					<a href="#contacts" class="mobile-menu__link js-scroll-to">Contacts</a>
 				</li>
 				<li class="mobile-menu__item mobile-menu__item--button">
-					<a href="#download" class="mobile-menu__link js-scroll-to">Download App</a>
+					<a href="#"
+						class="mobile-menu__link js-scroll-to">Download App</a>
 				</li>
 			</ul>
 		</div>
@@ -154,7 +155,8 @@
 									<a href="#contacts" class="menu__link js-scroll-to">Contacts</a>
 								</li>
 								<li class="menu__item menu__item--button">
-									<a href="#download" class="menu__link js-scroll-to">Download App</a>
+									<a href="#"
+										class="menu__link js-scroll-to">Download App</a>
 								</li>
 							</ul>
 						</nav>
@@ -1225,40 +1227,42 @@
 										<!-- End of Button -->
 										<!-- -->
 									</div>
-									
-										<div class="col-md-12" style="padding: 100px;">
-											<div class="footer__address">
-												<p class="footer__section__title"><i
-													class="fas fa-map-marker-alt"></i>&nbsp Let's Meet</p>
-												<a href="https://goo.gl/maps/GP56a7vsfhAbsxda9">
-													<p class="addressline">&nbsp&nbspG-405,Darshanam Plaza,</p>
-													<p class="addressline">&nbsp&nbspDanteshwar,Vadodara,Gujarat-</p>
-													<p class="addressline">&nbsp&nbsp&nbsp390004,</p>
-													<!-- <p class="addressline">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Vadodara -
+
+									<div class="col-md-12" style="padding: 100px;">
+										<div class="footer__address">
+											<p class="footer__section__title"><i class="fas fa-map-marker-alt"></i>&nbsp
+												Let's Meet</p>
+											<a href="https://goo.gl/maps/GP56a7vsfhAbsxda9">
+												<p class="addressline">&nbsp&nbspG-405,Darshanam Plaza,</p>
+												<p class="addressline">&nbsp&nbspDanteshwar,Vadodara,Gujarat-</p>
+												<p class="addressline">&nbsp&nbsp&nbsp390004,</p>
+												<!-- <p class="addressline">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Vadodara -
 														390011</p> -->
+											</a>
+											<br />
+											<hr style="border: solid #23034C;">
+											<p class="addressline">
+												<i class="fas fa-phone-alt"></i><a href="tel:+919924455528">&nbspCall Us
+													: </a>
+											</p>
+											<p class="addressline">
+												<!-- <i class="fas fa-phone-alt"></i> -->
+												<a href="tel:+91 7043507789">&nbsp&nbsp+91 7043507789 </a>
+											</p>
+											<hr style="border: solid #23034C;">
+											<p class="addressline">
+												<i class="fas fa-envelope"></i>
+												<a href="#">&nbsp&nbspDrop us a email :
 												</a>
-												<br/><hr style="border: solid #23034C;">
-												<p class="addressline">
-													<i class="fas fa-phone-alt"></i><a
-														href="tel:+919924455528">&nbspCall Us :  </a>
-												</p>
-												<p class="addressline">
-													<!-- <i class="fas fa-phone-alt"></i> -->
-													<a	href="tel:+91 7043507789">&nbsp&nbsp+91 7043507789 </a>
-												</p><hr style="border: solid #23034C;">
-												<p class="addressline">
-													<i class="fas fa-envelope"></i>
-													<a href="#">&nbsp&nbspDrop us a email :
-													</a>
-												</p>
-												<p class="addressline">
-													<!-- <i class="fas fa-envelope"></i> -->
-													<a href="mailto:help$shayar.me">&nbsp&nbsphelp@shayar.me
-													</a>
-												</p>
-											</div>
+											</p>
+											<p class="addressline">
+												<!-- <i class="fas fa-envelope"></i> -->
+												<a href="mailto:help$shayar.me">&nbsp&nbsphelp@shayar.me
+												</a>
+											</p>
 										</div>
-									
+									</div>
+
 								</div>
 							</form>
 						</div>
@@ -1414,7 +1418,7 @@
 	<!-- Scripts -->
 	<script src="https://maps.googleapis.com/maps/api/js"></script>
 	<script src="dist/script.js"></script>
-    <script src="https://kit.fontawesome.com/12a6f7d1ea.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/12a6f7d1ea.js" crossorigin="anonymous"></script>
 
 	<!-- End of Scripts -->
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
