--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="96x96">
 	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="16x16">
 	<link rel="manifest" href="assets/img/common/favicon/manifest.json">
-	<link rel="shortcut icon" href="assets/img/common/favicon/favicon.ico">
+	<link rel="shortcut icon" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png">
 	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="msapplication-TileImage" content="assets/img/common/favicon/mstile-144x144.png">
-	<meta name="msapplication-config" content="assets/img/common/favicon/browserconfig.xml">
+	<meta name="msapplication-TileImage" content="assets/img/common/favicon/Shayar_logo_512_whitebg.png">
+	<meta name="msapplication-config" content="assets/img/common/favicon/Shayar_logo_512_whitebg.png">
 	<meta name="theme-color" content="#ffffff">
 	<!-- End of Favicon -->
 	<!-- StyleSheets -->
