--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- End of Meta -->
 	<!-- Favicon -->
-	<link rel="apple-touch-icon" sizes="57x57" href="assets/img/common/favicon/apple-touch-icon-57x57.png">
+	<!-- <link rel="apple-touch-icon" sizes="57x57" href="assets/img/common/favicon/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="assets/img/common/favicon/apple-touch-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/img/common/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/common/favicon/apple-touch-icon-76x76.png">
@@ -21,11 +21,11 @@
 	<link rel="apple-touch-icon" sizes="120x120" href="assets/img/common/favicon/apple-touch-icon-120x120.png">
 	<link rel="apple-touch-icon" sizes="144x144" href="assets/img/common/favicon/apple-touch-icon-144x144.png">
 	<link rel="apple-touch-icon" sizes="152x152" href="assets/img/common/favicon/apple-touch-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/common/favicon/apple-touch-icon-180x180.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/common/favicon/apple-touch-icon-180x180.png"> -->
 	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="192x192">
+	<!-- <link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="192x192">
 	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="96x96">
-	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="16x16"> -->
 	<link rel="manifest" href="assets/img/common/favicon/manifest.json">
 	<link rel="shortcut icon" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png">
 	<meta name="msapplication-TileColor" content="#da532c">
@@ -1145,26 +1145,77 @@
 		</section>
 		<!-- End of Section -->
 		<!-- Section -->
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-md-24">
 					<a href="https://twitter.com/VSargu" class="section__button section__button--twitter">Follow us</a>
 				</div>
 			</div>
-		</div>
-		<section class="section section--blue " id='twitter'>
+		</div> -->
+		<!--<section class="section section--blue " id='twitter'>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 col-md-offset-6 col-sm-16 col-sm-offset-4">
-						<!-- Twitter Widget -->
+						 Twitter Widget 
 						<div class="twitter-widget js-twitter-widget owl-carousel " data-user='envato' data-max='5'
 							data-lang='en'> </div>
-						<!-- End of Twitter Widget -->
+						End of Twitter Widget 
 					</div>
+				</div>
+			</div> 
+		</section> -->
+		<!-- End of Section -->
+		<!--My code for download app Start-->
+		<section class="section section--grey " id='download'>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-24">
+						<!-- Section Title -->
+						<h2 class="section-title section-title--center "> Join Shayar 
+
+							<!-- <span class='section-title__highlight'>awesome</span> app -->
+						</h2>
+						<!-- End of Section Title -->
+						<!-- Section Subtitle -->
+						<p class="section-subtitle section-subtitle--center "> Be A Part Of Shayar Community
+
+						</p>
+						<!-- End of Section Subtitle -->
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-6 col-md-8 col-lg-offset-2">
+						<!-- Download Button -->
+						<a class="download-button  " href="https://chat.whatsapp.com/LbDIKv5k8IY2xPx5Zh1UzG">
+							<img src="assets/img/common/logo/whatsapp.png" class="download-button__icon" alt="Platform Icon">
+							<span class="download-button__platform">WhatsApp</span>
+							<!-- <span class="download-button__store">Google Play</span> -->
+						</a>
+						<!-- End of Download Button -->
+					</div>
+					<div class="col-lg-6 col-md-8 col-lg-offset-1">
+						<!-- Download Button -->
+						<a class="download-button  " href="https://instagram.com/shayar_the_community?utm_medium=copy_link">
+							<img src="assets/img/common/logo/insta.png" class="download-button__icon" alt="Platform Icon">
+							<span class="download-button__platform">Instagram</span>
+							<!-- <span class="download-button__store">Mac App Store</span> -->
+						</a>
+						<!-- End of Download Button -->
+					</div>
+					<div class="col-lg-6 col-md-8 col-lg-offset-1">
+						<!-- Download Button -->
+						<a class="download-button  " href="https://t.me/bestshayarihindi">
+							<img src="assets/img/common/logo/telegram.jpg" class="download-button__icon" alt="Platform Icon">
+							<span class="download-button__platform">Telegram</span>
+							<!-- <span class="download-button__store">App Store</span> -->
+						</a>
+						<!-- End of Download Button -->
+					</div>
+					
 				</div>
 			</div>
 		</section>
-		<!-- End of Section -->
+		<!--My code for download app Ends-->
 		<!-- Section -->
 		<section class="section section--large section--no-pb " id='contacts'>
 			<div class="container">
