--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-8 col-lg-offset-2">
 						<!-- Download Button -->
-						<a class="download-button  " href="https://chat.whatsapp.com/LbDIKv5k8IY2xPx5Zh1UzG">
+						<a class="download-button  " href="https://chat.whatsapp.com/LbDIKv5k8IY2xPx5Zh1UzG" target="_blank">
 							<img src="assets/img/common/logo/whatsapp.png" class="download-button__icon" alt="Platform Icon">
 							<span class="download-button__platform">WhatsApp</span>
 							<!-- <span class="download-button__store">Google Play</span> -->
@@ -1195,7 +1195,7 @@
 					</div>
 					<div class="col-lg-6 col-md-8 col-lg-offset-1">
 						<!-- Download Button -->
-						<a class="download-button  " href="https://instagram.com/shayar_the_community?utm_medium=copy_link">
+						<a class="download-button  " href="https://instagram.com/shayar_the_community?utm_medium=copy_link" target="_blank">
 							<img src="assets/img/common/logo/insta.png" class="download-button__icon" alt="Platform Icon">
 							<span class="download-button__platform">Instagram</span>
 							<!-- <span class="download-button__store">Mac App Store</span> -->
@@ -1204,7 +1204,7 @@
 					</div>
 					<div class="col-lg-6 col-md-8 col-lg-offset-1">
 						<!-- Download Button -->
-						<a class="download-button  " href="https://t.me/bestshayarihindi">
+						<a class="download-button  " href="https://t.me/bestshayarihindi" target="_blank">
 							<img src="assets/img/common/logo/telegram.jpg" class="download-button__icon" alt="Platform Icon">
 							<span class="download-button__platform">Telegram</span>
 							<!-- <span class="download-button__store">App Store</span> -->
