--- a/index.html
+++ b/index.html
@@ -217,12 +217,14 @@
 				<div class="row">
 					<div class="col-md-24">
 						<!-- Section Title -->
-						<h2 class="section-title section-title--center "> Download this
-							<span class='section-title__highlight'>awesome</span> app
+						<h2 class="section-title section-title--center "> Join Shayar 
+
+							<!-- <span class='section-title__highlight'>awesome</span> app -->
 						</h2>
 						<!-- End of Section Title -->
 						<!-- Section Subtitle -->
-						<p class="section-subtitle section-subtitle--center "> available on all modern operating systems
+						<p class="section-subtitle section-subtitle--center "> Be A Part Of Shayar Community
+
 						</p>
 						<!-- End of Section Subtitle -->
 					</div>
@@ -230,31 +232,32 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-8 col-lg-offset-2">
 						<!-- Download Button -->
-						<a class="download-button  " href="#">
-							<img src="http://placehold.it/80x80" class="download-button__icon" alt="Platform Icon">
-							<span class="download-button__platform">Android app on</span>
-							<span class="download-button__store">Google Play</span>
+						<a class="download-button  " href="https://chat.whatsapp.com/LbDIKv5k8IY2xPx5Zh1UzG" target="_blank">
+							<img src="assets/img/common/logo/whatsapp.png" class="download-button__icon" alt="Platform Icon">
+							<span class="download-button__platform">WhatsApp</span>
+							<!-- <span class="download-button__store">Google Play</span> -->
 						</a>
 						<!-- End of Download Button -->
 					</div>
 					<div class="col-lg-6 col-md-8 col-lg-offset-1">
 						<!-- Download Button -->
-						<a class="download-button  " href="#">
-							<img src="http://placehold.it/80x80" class="download-button__icon" alt="Platform Icon">
-							<span class="download-button__platform">Desktop app on</span>
-							<span class="download-button__store">Mac App Store</span>
+						<a class="download-button  " href="https://instagram.com/shayar_the_community?utm_medium=copy_link" target="_blank">
+							<img src="assets/img/common/logo/insta.png" class="download-button__icon" alt="Platform Icon">
+							<span class="download-button__platform">Instagram</span>
+							<!-- <span class="download-button__store">Mac App Store</span> -->
 						</a>
 						<!-- End of Download Button -->
 					</div>
 					<div class="col-lg-6 col-md-8 col-lg-offset-1">
 						<!-- Download Button -->
-						<a class="download-button  " href="#">
-							<img src="http://placehold.it/80x80" class="download-button__icon" alt="Platform Icon">
-							<span class="download-button__platform">IOS app on</span>
-							<span class="download-button__store">App Store</span>
+						<a class="download-button  " href="https://t.me/bestshayarihindi" target="_blank">
+							<img src="assets/img/common/logo/telegram.jpg" class="download-button__icon" alt="Platform Icon">
+							<span class="download-button__platform">Telegram</span>
+							<!-- <span class="download-button__store">App Store</span> -->
 						</a>
 						<!-- End of Download Button -->
 					</div>
+					
 				</div>
 			</div>
 		</section>
@@ -1025,6 +1028,9 @@
 		</section>
 		<!-- End of Section -->
 		<!-- Section -->
+		<!--App feature mera code Start-->
+
+		<!--App feature mera code Ends-->
 		<section class="section section--large " id='plans'>
 			<div class="container">
 				<div class="row">
@@ -1166,50 +1172,50 @@
 		</section> -->
 		<!-- End of Section -->
 		<!--My code for download app Start-->
-		<section class="section section--grey " id='download'>
+		<!--<section class="section section--grey " id='download'>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-24">
-						<!-- Section Title -->
+						<!-- Section Title 
 						<h2 class="section-title section-title--center "> Join Shayar 
 
 							<!-- <span class='section-title__highlight'>awesome</span> app -->
 						</h2>
-						<!-- End of Section Title -->
-						<!-- Section Subtitle -->
+						<!-- End of Section Title 
+						<!-- Section Subtitle 
 						<p class="section-subtitle section-subtitle--center "> Be A Part Of Shayar Community
 
 						</p>
-						<!-- End of Section Subtitle -->
+						<!-- End of Section Subtitle 
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-lg-6 col-md-8 col-lg-offset-2">
-						<!-- Download Button -->
+						<!-- Download Button 
 						<a class="download-button  " href="https://chat.whatsapp.com/LbDIKv5k8IY2xPx5Zh1UzG" target="_blank">
 							<img src="assets/img/common/logo/whatsapp.png" class="download-button__icon" alt="Platform Icon">
 							<span class="download-button__platform">WhatsApp</span>
 							<!-- <span class="download-button__store">Google Play</span> -->
 						</a>
-						<!-- End of Download Button -->
+						<!-- End of Download Button 
 					</div>
 					<div class="col-lg-6 col-md-8 col-lg-offset-1">
-						<!-- Download Button -->
+						<!-- Download Button 
 						<a class="download-button  " href="https://instagram.com/shayar_the_community?utm_medium=copy_link" target="_blank">
 							<img src="assets/img/common/logo/insta.png" class="download-button__icon" alt="Platform Icon">
 							<span class="download-button__platform">Instagram</span>
-							<!-- <span class="download-button__store">Mac App Store</span> -->
+							<!-- <span class="download-button__store">Mac App Store</span> 
 						</a>
-						<!-- End of Download Button -->
+						<!-- End of Download Button 
 					</div>
 					<div class="col-lg-6 col-md-8 col-lg-offset-1">
-						<!-- Download Button -->
+						<!-- Download Button 
 						<a class="download-button  " href="https://t.me/bestshayarihindi" target="_blank">
 							<img src="assets/img/common/logo/telegram.jpg" class="download-button__icon" alt="Platform Icon">
 							<span class="download-button__platform">Telegram</span>
 							<!-- <span class="download-button__store">App Store</span> -->
 						</a>
-						<!-- End of Download Button -->
+						<!-- End of Download Button 
 					</div>
 					
 				</div>
