--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="16x16"> -->
 	<link rel="manifest" href="assets/img/common/favicon/manifest.json">
 	<link rel="shortcut icon" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png">
+	<!--my file link start-->
+	<!-- <link rel="stylesheet" href="my/lightbox.min.css" /> -->
+	<link rel="stylesheet" href="mystylefile/lightbox.min.css" />
+    <!-- <link rel="stylesheet" href="dist/slick.css" /> -->
+    <link rel="stylesheet" href="mystylefile/slick.css" />
+    <!-- <link rel="stylesheet" href="dist/slick-theme.css" /> -->
+    <link rel="stylesheet" href="mystylefile/slick-theme.css" />
+    <link rel="stylesheet" href="mystylefile/style.css" />
+    <!-- <link rel="stylesheet" href="dist/aos.css" /> -->
+    <!-- <link rel="stylesheet" href="mystylefile/aos.css" /> -->
+
+    <!-- <link rel="stylesheet" href="dist/style.css" /> -->
+	<!--my file link end-->
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-TileImage" content="assets/img/common/favicon/Shayar_logo_512_whitebg.png">
 	<meta name="msapplication-config" content="assets/img/common/favicon/Shayar_logo_512_whitebg.png">
@@ -1029,26 +1042,67 @@
 		<!-- End of Section -->
 		<!-- Section -->
 		<!--App feature mera code Start-->
-
+		<section class="standards" data-aos="fade-up">
+			<div class="container">
+			  <h2 class="section__title">App Features</h2>
+			  <!-- <p class="section__description">
+				PN Institute is an established name in IIT | JEE | NEET | FOUNDATION | BOARD preparation, guiding students of
+				6 | 7 | 8 | 9 | 10 | 11 – 12 A & B Group Science since 2012.
+			  </p> -->
+			  <div class="container standards__container">
+				<div class="standards__standard">
+				  <p class="standard__image">Update Profile</p>
+				  <!-- <p class="standard__name">Class VII</p> -->
+				  <!-- <a href="pages/admission.html" class="button">Read More</a> -->
+				</div>
+				<div class="standards__standard">
+				  <p class="standard__image">15+ categories</p>
+				  <!-- <p class="standard__name">Class VIII</p>
+				  <a href="pages/admission.html" class="button">Read More</a> -->
+				</div>
+				<div class="standards__standard">
+				  <p class="standard__image">Free library</p>
+				  <!-- <p class="standard__name">Class IX</p>
+				  <a href="pages/admission.html" class="button">Read More</a> -->
+				</div>
+				<div class="standards__standard">
+				  <p class="standard__image">Related your daily mood</p>
+				  <!-- <p class="standard__name">Class X</p>
+				  <a href="pages/admission.html" class="button">Read More</a> -->
+				</div>
+				<div class="standards__standard">
+				  <p class="standard__image">Shayari's video</p>
+				  <!-- <p class="standard__name">Class XI</p>
+				  <a href="pages/admission.html" class="button">Read More</a> -->
+				</div>
+				<div class="standards__standard">
+				  <p class="standard__image">videos of 8s to 60s</p>
+				  <!-- <p class="standard__name">Class XII</p>
+				  <a href="pages/admission.html" class="button">Read More</a> -->
+				</div>
+			  </div>
+			</div>
+		  </section>
 		<!--App feature mera code Ends-->
+		<!--
 		<section class="section section--large " id='plans'>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-24">
-						<!-- Section Title -->
+						Section Title
 						<h2 class="section-title section-title--center "> Our awesome
 							<span class='section-title__highlight'>pricing plans</span>
 						</h2>
-						<!-- End of Section Title -->
-						<!-- Section Subtitle -->
+						End of Section Title
+						Section Subtitle
 						<p class="section-subtitle section-subtitle--center "> Lorem ipsum dolor sit amet, eos fierent
 							pertinacia eu est elit tincidunt sadipscing te </p>
-						<!-- End of Section Subtitle -->
+						End of Section Subtitle
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-8 col-sm-16 col-sm-offset-4 col-md-offset-0">
-						<!-- Pricing -->
+						 Pricing 
 						<div class="pricing  ">
 							<h3 class="pricing__title">Starter Plan</h3>
 							<h4 class="pricing__price">free</h4>
@@ -1068,16 +1122,16 @@
 								<li class="pricing__feature pricing__feature--passive">updates</li>
 								<li class="pricing__feature pricing__feature--passive">premium support</li>
 							</ul>
-							<!-- Button -->
+							Button
 							<div class="button button--small button--shadow button--dark  ">
 								<a href="" class="button__link">Sign up</a>
 							</div>
-							<!-- End of Button -->
+							End of Button
 						</div>
-						<!-- End of Pricing -->
+						End of Pricing
 					</div>
 					<div class="col-md-8 col-sm-16 col-sm-offset-4 col-md-offset-0">
-						<!-- Pricing -->
+						Pricing
 						<div class="pricing pricing--featured  ">
 							<h3 class="pricing__title">Advanced Plan</h3>
 							<h4 class="pricing__price">
@@ -1102,16 +1156,16 @@
 								<li class="pricing__feature">updates</li>
 								<li class="pricing__feature pricing__feature--passive">premium support</li>
 							</ul>
-							<!-- Button -->
+							Button
 							<div class="button button--small button--shadow button--dark  ">
 								<a href="" class="button__link">Sign up</a>
 							</div>
-							<!-- End of Button -->
+							End of Button
 						</div>
-						<!-- End of Pricing -->
+						End of Pricing
 					</div>
 					<div class="col-md-8 col-sm-16 col-sm-offset-4 col-md-offset-0">
-						<!-- Pricing -->
+						Pricing
 						<div class="pricing  ">
 							<h3 class="pricing__title">Professional Plan</h3>
 							<h4 class="pricing__price">
@@ -1138,18 +1192,18 @@
 									<span class="pricing__highlight">premium support</span>
 								</li>
 							</ul>
-							<!-- Button -->
+							Button
 							<div class="button button--small button--shadow button--dark  ">
 								<a href="" class="button__link">Sign up</a>
 							</div>
-							<!-- End of Button -->
+							End of Button
 						</div>
-						<!-- End of Pricing -->
+						End of Pricing
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- End of Section -->
+		End of Section -->
 		<!-- Section -->
 		<!-- <div class="container">
 			<div class="row">
@@ -1476,6 +1530,41 @@
 	<script src="https://maps.googleapis.com/maps/api/js"></script>
 	<script src="dist/script.js"></script>
 	<script src="https://kit.fontawesome.com/12a6f7d1ea.js" crossorigin="anonymous"></script>
+	
+
+	<!-- <script src="dist/jquery.min.js"></script>
+    <script src="dist/jquery-migrate.min.js"></script>
+    <script src="dist/lightbox-plus-jquery.min.js"></script>
+
+    <script src="dist/slick.min.js"></script>
+    <script src="dist/slick-slide.js"></script>
+    <script src="dist/aos.js"></script> -->
+
+	
+
+
+	<script src="mystylefile/jquery-migrate.min.js"></script>
+    <script src="mystylefile/jquery.min.js"></script>
+    <script src="mystylefile/lightbox-plus-jquery.min.js"></script>
+
+    <script src="mystylefile/slick.min.js"></script>
+    <script src="mystylefile/slick-slide.js"></script>
+    <script src="mystylefile/aos.js"></script>
+	<script>
+		AOS.init({
+		  duration: 800,
+		});
+	  </script>
+	  <script src="mystylefile/script.js"></script>
+
+
+
+	  <!-- <script>
+		AOS.init({
+		  duration: 800,
+		});
+	  </script>
+	  <script src="dist/script.js"></script> -->
 
 	<!-- End of Scripts -->
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
