--- a/index.html
+++ b/index.html
@@ -186,37 +186,37 @@
 			<!-- Slider -->
 			<div class="slider js-slider owl-carousel ">
 				<div class="slider__slide">
-					<h2 class="slider__title"> Lorem
-						<span class='slider__highlight'>ipsum dolor</span> sit amet, est te minim consectetuer usu sale
-						volutpa
+					<h2 class="slider__title"> Let shayar 
+						<span class='slider__highlight'>know your current mood</span>  and scroll relatable shayari’s
 					</h2>
 					<div class="slider__content">
-						<img src="http://placehold.it/584x859" class="slider__secondary" alt="Slider Image">
-						<img src="http://placehold.it/584x859" class="slider__secondary slider__secondary--right"
+						<img src="assets/img/common/slider/LOGIN PAGE.png" class="slider__secondary" alt="Slider Image">
+						<img src="assets/img/common/slider/SPLASH SCREEN (1).png" class="slider__secondary slider__secondary--right"
 							alt="Slider Image">
-						<img src="http://placehold.it/949x1170" class="slider__image" alt="Slider Image">
+						<img src="assets/img/common/slider/MOOD PAGE.png" class="slider__image" alt="Slider Image">
 					</div>
 				</div>
 				<div class="slider__slide">
-					<h2 class="slider__title"> Laudantium
-						<span class='slider__highlight'>facere quis optio</span>, error cupiditate non ipsam assumenda
+					<h2 class="slider__title">Discover 
+						<span class='slider__highlight'>thousands of shayari 
+						</span> and follow your favourite shayari creators
 					</h2>
 					<div class="slider__content">
-						<img src="http://placehold.it/584x859" class="slider__secondary" alt="Slider Image">
-						<img src="http://placehold.it/584x859" class="slider__secondary slider__secondary--right"
+						<img src="assets/img/common/slider/SEARCH USER ACCOUNT.png" class="slider__secondary" alt="Slider Image">
+						<img src="assets/img/common/slider/DISCOVER MAIN PAGE.png" class="slider__secondary slider__secondary--right"
 							alt="Slider Image">
-						<img src="http://placehold.it/949x1170" class="slider__image" alt="Slider Image">
+						<img src="assets/img/common/slider/SHOW ALL VIDEO (1).png" class="slider__image" alt="Slider Image">
 					</div>
 				</div>
 				<div class="slider__slide">
-					<h2 class="slider__title"> Blanditiis
-						<span class='slider__highlight'>ipsum cum consectetur</span>, praesentium harum ipsum.
+					<h2 class="slider__title">Explore 
+						<span class='slider__highlight'>Shayari’s in Video</span>, Image and Text format
 					</h2>
 					<div class="slider__content">
-						<img src="http://placehold.it/584x859" class="slider__secondary" alt="Slider Image">
-						<img src="http://placehold.it/584x859" class="slider__secondary slider__secondary--right"
+						<img src="assets/img/common/slider/HOME IMAGE.png" class="slider__secondary" alt="Slider Image">
+						<img src="assets/img/common/slider/HOME VIDEO (1).png" class="slider__secondary slider__secondary--right"
 							alt="Slider Image">
-						<img src="http://placehold.it/949x1170" class="slider__image" alt="Slider Image">
+						<img src="assets/img/common/slider/HOME TEXT.png" class="slider__image" alt="Slider Image">
 					</div>
 				</div>
 			</div>
