--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 							target="_blank">
 							<img src="assets/img/common/logo/whatsapp.png" class="download-button__icon"
 								alt="Platform Icon">
-							<span class="download-button__platform">WhatsApp</span>
-							<!-- <span class="download-button__store">Google Play</span> -->
+							<span class="download-button__platform" style="padding-top:12px;text-align:center;">WhatsApp</span>
+							<!-- <span class="download-button__store">Whatsapp</span> -->
 						</a>
 						<!-- End of Download Button -->
 					</div>
@@ -259,7 +259,7 @@
 							href="https://instagram.com/shayar_the_community?utm_medium=copy_link" target="_blank">
 							<img src="assets/img/common/logo/insta.png" class="download-button__icon"
 								alt="Platform Icon">
-							<span class="download-button__platform">Instagram</span>
+							<span class="download-button__platform" style="padding-top:12px;text-align:center;">Instagram</span>
 							<!-- <span class="download-button__store">Mac App Store</span> -->
 						</a>
 						<!-- End of Download Button -->
@@ -269,7 +269,7 @@
 						<a class="download-button  " href="https://t.me/bestshayarihindi" target="_blank">
 							<img src="assets/img/common/logo/telegram.jpg" class="download-button__icon"
 								alt="Platform Icon">
-							<span class="download-button__platform">Telegram</span>
+							<span class="download-button__platform"style="padding-top:12px;text-align:center;">Telegram</span>
 							<!-- <span class="download-button__store">App Store</span> -->
 						</a>
 						<!-- End of Download Button -->
